Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Julia/wrappers/AstroFuncDll.jl


#############################################################################
# Solves Kepler's equation (M = E - e sin(E)) for the eccentric anomaly, E, by iteration.
function SolveKepEqtn(xa_kep)
   eccAnomaly = ccall( (:SolveKepEqtn,libname) 
     , Float64
     , (Ref{Float64},)
     , xa_kep)
   return eccAnomaly
end

#############################################################################
# Computes true anomaly from a set of Keplerian elements.
function CompTrueAnomaly(xa_kep)
   trueAnomaly = ccall( (:CompTrueAnomaly,libname) 
     , Float64
     , (Ref{Float64},)
     , xa_kep)
   return trueAnomaly
end

#############################################################################
# Converts mean motion N to semi-major axis A.
function NToA(n)
   a = ccall( (:NToA,libname) 
     , Float64
     , (Float64,)
     , n)
   return a
end

#############################################################################
# Converts semi-major axis A to mean motion N.
function AToN(a)
   n = ccall( (:AToN,libname) 
     , Float64
     , (Float64,)
     , a)
   return n
end

#############################################################################
# Converts Kozai mean motion to Brouwer mean motion.
# SGP TLE's use Kozai mean motion while SGP4/SGP4-XP TLE's use Brouwer mean motion.
function KozaiToBrouwer(eccen, incli, nKozai)
   nBrouwer = ccall( (:KozaiToBrouwer,libname) 
     , Float64
     , (Float64
     , Float64
     , Float64)
     , eccen,incli,nKozai)
   return nBrouwer
end

#############################################################################
# Converts Brouwer mean motion to Kozai mean motion.
# SGP TLE's use Kozai mean motion while SGP4/SGP4-XP TLE's use Brouwer mean motion.
function BrouwerToKozai(eccen, incli, nBrouwer)
   nKozai = ccall( (:BrouwerToKozai,libname) 
     , Float64
     , (Float64
     , Float64
     , Float64)
     , eccen,incli,nBrouwer)
   return nKozai
end

#############################################################################
# Converts a set of osculating Keplerian elements to a set of mean Keplerian elements using method 9 algorithm.
function KepOscToMean(xa_OscKep)
   xa_MeanKep = zeros(Float64, 6)
   ccall( (:KepOscToMean,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , xa_OscKep,xa_MeanKep)
   return xa_MeanKep
end

#############################################################################
# Converts an ECI position vector XYZ to geodetic latitude, longitude, and height.
function XYZToLLH(thetaG, metricPos)
   metricLLH = zeros(Float64, 3)
   ccall( (:XYZToLLH,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64})
     , thetaG,metricPos,metricLLH)
   return metricLLH
end

#############################################################################
# Converts an ECI position vector XYZ to geodetic latitude, longitude, and height at the specified time.
function XYZToLLHTime(ds50UTC, metricPos)
   metricLLH = zeros(Float64, 3)
   ccall( (:XYZToLLHTime,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,metricPos,metricLLH)
   return metricLLH
end

#############################################################################
# Converts geodetic latitude, longitude, and height to an ECI position vector XYZ.
function LLHToXYZ(thetaG, metricLLH)
   metricXYZ = zeros(Float64, 3)
   ccall( (:LLHToXYZ,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64})
     , thetaG,metricLLH,metricXYZ)
   return metricXYZ
end

#############################################################################
# Converts geodetic latitude, longitude, and height to an ECI position vector XYZ at the specified time.
function LLHToXYZTime(ds50UTC, metricLLH)
   metricXYZ = zeros(Float64, 3)
   ccall( (:LLHToXYZTime,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,metricLLH,metricXYZ)
   return metricXYZ
end

#############################################################################
# Converts EFG position and velocity vectors to ECI position and velocity vectors.
function EFGToECI(thetaG, posEFG, velEFG)
   posECI = zeros(Float64, 3)
   velECI = zeros(Float64, 3)
   ccall( (:EFGToECI,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , thetaG,posEFG,velEFG,posECI,velECI)
   return posECI, velECI
end

#############################################################################
# Converts EFG position and velocity vectors to ECI position and velocity vectors at the specified time.
function EFGToECITime(ds50UTC, posEFG, velEFG)
   posECI = zeros(Float64, 3)
   velECI = zeros(Float64, 3)
   ccall( (:EFGToECITime,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,posEFG,velEFG,posECI,velECI)
   return posECI, velECI
end

#############################################################################
# Converts ECI position and velocity vectors to EFG position and velocity vectors.
function ECIToEFG(thetaG, posECI, velECI)
   posEFG = zeros(Float64, 3)
   velEFG = zeros(Float64, 3)
   ccall( (:ECIToEFG,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , thetaG,posECI,velECI,posEFG,velEFG)
   return posEFG, velEFG
end

#############################################################################
# Converts ECI position and velocity vectors to EFG position and velocity vectors at the specified time.
function ECIToEFGTime(ds50UTC, posECI, velECI)
   posEFG = zeros(Float64, 3)
   velEFG = zeros(Float64, 3)
   ccall( (:ECIToEFGTime,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,posECI,velECI,posEFG,velEFG)
   return posEFG, velEFG
end

#############################################################################
# Converts ECR position and velocity vectors to EFG position and velocity vectors.
function ECRToEFG(polarX, polarY, posECR, velECR)
   posEFG = zeros(Float64, 3)
   velEFG = zeros(Float64, 3)
   ccall( (:ECRToEFG,libname) 
     , Nothing
     , (Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , polarX,polarY,posECR,velECR,posEFG,velEFG)
   return posEFG, velEFG
end

#############################################################################
# Converts ECR position and velocity vectors to EFG position and velocity vectors at the specified time.
function ECRToEFGTime(ds50UTC, posECR, velECR)
   posEFG = zeros(Float64, 3)
   velEFG = zeros(Float64, 3)
   ccall( (:ECRToEFGTime,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,posECR,velECR,posEFG,velEFG)
   return posEFG, velEFG
end

#############################################################################
# Converts EFG position and velocity vectors to ECR position and velocity vectors.
function EFGToECR(polarX, polarY, posEFG, velEFG)
   posECR = zeros(Float64, 3)
   velECR = zeros(Float64, 3)
   ccall( (:EFGToECR,libname) 
     , Nothing
     , (Float64
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , polarX,polarY,posEFG,velEFG,posECR,velECR)
   return posECR, velECR
end

#############################################################################
# Converts EFG position and velocity vectors to ECR position and velocity vectors at the specified time.
function EFGToECRTime(ds50UTC, posEFG, velEFG)
   posECR = zeros(Float64, 3)
   velECR = zeros(Float64, 3)
   ccall( (:EFGToECRTime,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , ds50UTC,posEFG,velEFG,posECR,velECR)
   return posECR, velECR
end

#############################################################################
# Converts an EFG position vector to geodetic latitude, longitude, and height.
function EFGPosToLLH(posEFG)
   metricLLH = zeros(Float64, 3)
   ccall( (:EFGPosToLLH,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , posEFG,metricLLH)
   return metricLLH
end

#############################################################################
# Converts geodetic latitude, longitude, and height to an EFG position vector.
function LLHToEFGPos(metricLLH)
   posEFG = zeros(Float64, 3)
   ccall( (:LLHToEFGPos,libname) 
     , Nothing
     , (Ref{Float64}
     , Ref{Float64})
     , metricLLH,posEFG)
   return posEFG
end

#############################################################################
# Rotates position and velocity vectors from J2000 to coordinates of the specified date, expressed in ds50TAI.
function RotJ2KToDate(spectr, nutationTerms, ds50TAI, posJ2K, velJ2K)
   posDate = zeros(Float64, 3)
   velDate = zeros(Float64, 3)
   ccall( (:RotJ2KToDate,libname) 
     , Nothing
     , (Int32
     , Int32
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , spectr,nutationTerms,ds50TAI,posJ2K,velJ2K,posDate,velDate)
   return posDate, velDate
end

#############################################################################
# Rotates position and velocity vectors from coordinates of date to J2000.
function RotDateToJ2K(spectr, nutationTerms, ds50TAI, posDate, velDate)
   posJ2K = zeros(Float64, 3)
   velJ2K = zeros(Float64, 3)
   ccall( (:RotDateToJ2K,libname) 
     , Nothing
     , (Int32
     , Int32
     , Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , spectr,nutationTerms,ds50TAI,posDate,velDate,posJ2K,velJ2K)
   return posJ2K, velJ2K
end

#############################################################################
# Computes the Sun and Moon position at the specified time.
function CompSunMoonPos(ds50ET)
   uvecSun = zeros(Float64, 3)
   sunVecMag = zeros(Float64, 1)
   uvecMoon = zeros(Float64, 3)
   moonVecMag = zeros(Float64, 1)
   ccall( (:CompSunMoonPos,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , ds50ET,uvecSun,sunVecMag,uvecMoon,moonVecMag)
   return uvecSun, sunVecMag[1], uvecMoon, moonVecMag[1]
end

#############################################################################
# Computes the Sun position at the specified time.
function CompSunPos(ds50ET)
   uvecSun = zeros(Float64, 3)
   sunVecMag = zeros(Float64, 1)
   ccall( (:CompSunPos,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64})
     , ds50ET,uvecSun,sunVecMag)
   return uvecSun, sunVecMag[1]
end

#############################################################################
# Computes the Moon position at the specified time.
function CompMoonPos(ds50ET)
   uvecMoon = zeros(Float64, 3)
   moonVecMag = zeros(Float64, 1)
   ccall( (:CompMoonPos,libname) 
     , Nothing
     , (Float64
     , Ref{Float64}
     , Ref{Float64})
     , ds50ET,uvecMoon,moonVecMag)
   return uvecMoon, moonVecMag[1]
end

#############################################################################
# This function is intended for future use.  No information is currently available.
# This function is intended for future use.  No information is currently available.
function AstroConvFrTo(xf_Conv, frArr)
   toArr = zeros(Float64, 128)
   ccall( (:AstroConvFrTo,libname) 
     , Nothing
     , (Int32
     , Ref{Float64}
     , Ref{Float64})
     , xf_Conv,frArr,toArr)
   return toArr
end
